tests/baselines/reference/parser521128.errors.txt
parser521128.ts(1,1): error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
parser521128.ts(1,15): error TS1005: ';' expected.


==== parser521128.ts (2 errors) ====
    module.module { }
    ~~~~~~
!!! error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
                  ~
!!! error TS1005: ';' expected.